# ephemeral-enhancement

./: .gitignore  README.md  dictionary.txt  main.py  pyproject.toml  pytest.ini  run_pipeline.py  test_stages.py
core/: __init__.py  args.py  executor.py  parallel.py  pipeline.py  utils.py  worker.py
docs/: ADDING_A_STAGE.md  ARCHITECTURE.md  CONTEXT.md  LLM-CONTEXT.md  SOE.MD  THEGIANT.md
docs/CIPHERS/: DE.MD  GK.md  REVELATIONS.md  ZNS.md
docs/CONTRIBUTING/: ADDING_A_STAGE.md
stages/: __init__.py  base64decode.py  bifid.py  caesar.py  columnar.py  common.py  double_columnar.py  railfence.py  reverse.py  xor.py
